force-app/main/default/objects/Contact/fields/AFF_staff__c.field-meta.xml
<CustomField>
    <fullName>AFF_staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this contact on payroll at the ToolBank?</description>
    <inlineHelpText>Is this contact on payroll at the ToolBank?  Includes FT and PT; dones not include interns or AmeriCorps.</inlineHelpText>
    <label>AFF staff?</label>
    <type>Checkbox</type>
</CustomField>