force-app/main/default/objects/Contact/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <description>The affiliate to which the contact is most closely connected.</description>
    <inlineHelpText>Select the affiliate to which the contact is most closely connected.  Go to www.toolbank.org/citycodes to view a city code list.</inlineHelpText>
    <label>Affiliate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>BLT</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>CIN</fullName>
            </value>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>DEN</fullName>
            </value>
            <value>
                <fullName>DET</fullName>
            </value>
            <value>
                <fullName>HFD</fullName>
            </value>
            <value>
                <fullName>HOU</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NWK</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
            <value>
                <fullName>PHX</fullName>
            </value>
            <value>
                <fullName>RVA</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
            <value>
                <fullName>WDC</fullName>
            </value>
            <value>
                <fullName>WNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>