force-app/main/default/objects/Contact/fields/Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Name__c</fullName>
    <formula>npsp__Primary_Affiliation__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliate Name</label>
    <type>Text</type>
</CustomField>