force-app/main/default/objects/Contact/fields/Ann_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Ann_Rpt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for people who should receive an annual report.</description>
    <inlineHelpText>Check this box for people who should receive an annual report.</inlineHelpText>
    <label>Annual Report?</label>
    <type>Checkbox</type>
</CustomField>