force-app/main/default/objects/Contact/fields/Annual_Board_Conflict_Document_On_File__c.field-meta.xml
<CustomField>
    <fullName>Annual_Board_Conflict_Document_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Board Member has signed their annual conflict of interest form.</description>
    <label>Annual Board Conflict Document On File</label>
    <type>Checkbox</type>
</CustomField>