force-app/main/default/objects/Contact/fields/Annual_Board_Pledge_Document_On_File__c.field-meta.xml
<CustomField>
    <fullName>Annual_Board_Pledge_Document_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Board Member has submitted their annual board pledge.</description>
    <label>Annual Board Pledge Document On File</label>
    <type>Checkbox</type>
</CustomField>