force-app/main/default/objects/Contact/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <description>The email for the Contact&apos;s Assistant</description>
    <inlineHelpText>The email for the Contact&apos;s Assistant</inlineHelpText>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>