force-app/main/default/objects/Contact/fields/Board_Committee__c.field-meta.xml
<CustomField>
    <fullName>Board_Committee__c</fullName>
    <label>Board Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive Committee</fullName>
            </value>
            <value>
                <fullName>Finance Committee</fullName>
            </value>
            <value>
                <fullName>Marketing Committee</fullName>
                <label>Marketing and PR Committee</label>
            </value>
            <value>
                <fullName>Resource Development Committee</fullName>
            </value>
            <value>
                <fullName>Replication and Sustainability Committee</fullName>
            </value>
            <value>
                <fullName>Technology and Data Committee</fullName>
            </value>
            <value>
                <fullName>Disaster Services (TDS) Advisory Council</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>STAFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>