force-app/main/default/objects/Contact/fields/Board_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_End_Date__c</fullName>
    <label>Board End Date</label>
    <type>Date</type>
</CustomField>