force-app/main/default/objects/Contact/fields/Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current or past board member</description>
    <inlineHelpText>Is this Contact a current or past member?</inlineHelpText>
    <label>Board Member</label>
    <type>Checkbox</type>
</CustomField>