force-app/main/default/objects/Contact/fields/Board_Pledge_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Board_Pledge_This_Year__c</fullName>
    <label>Board Pledge This Year</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>