force-app/main/default/objects/Contact/fields/Board_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Start_Date__c</fullName>
    <label>Board Start Date</label>
    <type>Date</type>
</CustomField>