force-app/main/default/objects/Contact/fields/Board_Title__c.field-meta.xml
<CustomField>
    <fullName>Board_Title__c</fullName>
    <label>Board Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>