force-app/main/default/objects/Contact/fields/Community_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Community_Relationship__c</fullName>
    <label>Community Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Public Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>