force-app/main/default/objects/Contact/fields/Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Connectivity__c</fullName>
    <inlineHelpText>Select cities where the contact has connections that might be useful in creating new affiliates.</inlineHelpText>
    <label>Connectivity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Akron OH (99)</fullName>
            </value>
            <value>
                <fullName>Albuquerque NM (34)</fullName>
            </value>
            <value>
                <fullName>Amarillo TX (122)</fullName>
            </value>
            <value>
                <fullName>Anaheim CA (56)</fullName>
            </value>
            <value>
                <fullName>Anchorage AK (66)</fullName>
            </value>
            <value>
                <fullName>Arlington TX (49)</fullName>
            </value>
            <value>
                <fullName>Arlington VA (96)</fullName>
            </value>
            <value>
                <fullName>Aurora CO (59)</fullName>
            </value>
            <value>
                <fullName>Aurora 	IL (134)</fullName>
            </value>
            <value>
                <fullName>Austin TX (15)</fullName>
            </value>
            <value>
                <fullName>Bakersfield CA (58)</fullName>
            </value>
            <value>
                <fullName>Baltimore MD (21)</fullName>
            </value>
            <value>
                <fullName>Baton Rouge LA (88)</fullName>
            </value>
            <value>
                <fullName>Birmingham AL (83)</fullName>
            </value>
            <value>
                <fullName>Boise IA (100)</fullName>
            </value>
            <value>
                <fullName>Boston MA (20)</fullName>
            </value>
            <value>
                <fullName>Brownsville TX (131)</fullName>
            </value>
            <value>
                <fullName>Buffalo NY (70)</fullName>
            </value>
            <value>
                <fullName>Chandler AZ (76)</fullName>
            </value>
            <value>
                <fullName>Charlotte NC (18)</fullName>
            </value>
            <value>
                <fullName>Chattanooga TN (140)</fullName>
            </value>
            <value>
                <fullName>Chesapeake VA (91)</fullName>
            </value>
            <value>
                <fullName>Chicago IL (3)</fullName>
            </value>
            <value>
                <fullName>Chula Vista CA (90)</fullName>
            </value>
            <value>
                <fullName>Cincinnati OH (57)</fullName>
            </value>
            <value>
                <fullName>Cleveland OH (43)</fullName>
            </value>
            <value>
                <fullName>Colorado Springs CO (46)</fullName>
            </value>
            <value>
                <fullName>Columbus GA (121)</fullName>
            </value>
            <value>
                <fullName>Columbus OH (16)</fullName>
            </value>
            <value>
                <fullName>Corpus Christi TX (65)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>