force-app/main/default/objects/Contact/fields/Created_from_member_portal__c.field-meta.xml
<CustomField>
    <fullName>Created_from_member_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from member portal</label>
    <type>Checkbox</type>
</CustomField>