force-app/main/default/objects/Contact/fields/Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Within the next 7 - 10 days this Individual will be removed from your Agency and will no longer be able to login to the portal.</inlineHelpText>
    <label>Deactivate</label>
    <type>Checkbox</type>
</CustomField>