force-app/main/default/objects/Contact/fields/Disable_User_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Request_Date__c</fullName>
    <label>Disable User Request Date</label>
    <type>Date</type>
</CustomField>