force-app/main/default/objects/Contact/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact is related to TBUSA Disaster Services</description>
    <inlineHelpText>Contact is related to TBUSA Disaster Services</inlineHelpText>
    <label>Disaster?</label>
    <type>Checkbox</type>
</CustomField>