force-app/main/default/objects/Contact/fields/Display_Enable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Display_Enable_Contact__c</fullName>
    <formula>IF(  CONTAINS(Username__c , &apos;@&apos;) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Enable Contact</label>
    <type>Checkbox</type>
</CustomField>