force-app/main/default/objects/Contact/fields/DO_NOT_MAIL__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_MAIL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if contact wants no notifications, requests or other via mail or email.</description>
    <label>DO NOT MAIL</label>
    <type>Checkbox</type>
</CustomField>