force-app/main/default/objects/Contact/fields/Executive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Executive_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this contact an executive at their organization?</inlineHelpText>
    <label>Executive Contact</label>
    <type>Checkbox</type>
</CustomField>