force-app/main/default/objects/Contact/fields/Executive_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Executive_Home_Phone__c</fullName>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>