force-app/main/default/objects/Contact/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <description>Work phone extension</description>
    <inlineHelpText>Work phone extension</inlineHelpText>
    <label>Ext.</label>
    <length>6</length>
    <type>Text</type>
</CustomField>