force-app/main/default/objects/Contact/fields/GW_Volunteers__Last_Volunteer_Date__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Last_Volunteer_Date__c</fullName>
    <inlineHelpText>The date of the most recent Volunteer Hours record for this Contact with a status of Completed (read only).</inlineHelpText>
    <label>Last Volunteer Date</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>