force-app/main/default/objects/Contact/fields/GW_Volunteers__Unique_Volunteer_Count__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Unique_Volunteer_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>