force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Indicates which skills this Contact has. You can filter on skills when you look for volunteers for particular Jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data_Entry</fullName>
                <label>Data Entry</label>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Graphic Design</fullName>
            </value>
            <value>
                <fullName>Manual labor</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Small Engine Repair</fullName>
            </value>
            <value>
                <fullName>Tool Sharpening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>