force-app/main/default/objects/Contact/fields/HH_Address_Compare__c.field-meta.xml
<CustomField>
    <fullName>HH_Address_Compare__c</fullName>
    <formula>IF(NOT(ISBLANK(UPPER(MailingStreet&amp;MailingCity&amp;MailingState&amp;MailingPostalCode))),
IF(NOT(ISBLANK(UPPER(npo02__Household__r.npo02__MailingStreet__c&amp;npo02__Household__r.npo02__MailingCity__c&amp;npo02__Household__r.npo02__MailingState__c&amp;npo02__Household__r.npo02__MailingPostalCode__c))),
IF(UPPER(npo02__Household__r.npo02__MailingStreet__c&amp;npo02__Household__r.npo02__MailingCity__c&amp;npo02__Household__r.npo02__MailingState__c&amp;npo02__Household__r.npo02__MailingPostalCode__c) = Upper(MailingStreet&amp;MailingCity&amp;MailingState&amp;MailingPostalCode)
,&quot;Same Info&quot;
,&quot;Address Issue&quot;)
,&quot;No Address&quot;)
,&quot;No Address&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HH Address Compare</label>
    <type>Text</type>
</CustomField>