force-app/main/default/objects/Contact/fields/JoinDate__c.field-meta.xml
<CustomField>
    <fullName>JoinDate__c</fullName>
    <description>Select the date that this person joined the board of  directors.</description>
    <inlineHelpText>Select the date that this person joined the board of  directors.</inlineHelpText>
    <label>Join Date</label>
    <type>Date</type>
</CustomField>