force-app/main/default/objects/Contact/fields/MC4SF__MC_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MC Subscriber</label>
    <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>