force-app/main/default/objects/Contact/fields/npe01__AlternateEmail__c.field-meta.xml
<CustomField>
    <fullName>npe01__AlternateEmail__c</fullName>
    <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>