force-app/main/default/objects/Contact/fields/npe01__HomeEmail__c.field-meta.xml
<CustomField>
    <fullName>npe01__HomeEmail__c</fullName>
    <description>See Preferred Email field.</description>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>