force-app/main/default/objects/Contact/fields/npe01__Last_Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>npe01__Last_Donation_Date__c</fullName>
    <description>This field is only used with the one-to-one Organization to Contact model.</description>
    <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>