force-app/main/default/objects/Contact/fields/npe01__Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>npe01__Organization_Type__c</fullName>
    <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
    <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Type</label>
    <type>Text</type>
</CustomField>